<resources>
  <string name="app_name">Spark</string>
  <string name="prompt_email">Email</string>
  <string name="prompt_password">Password (optional)</string>
  <string name="action_sign_in">Sign in or register</string>
  <string name="action_sign_in_short">Sign in</string>
  <string name="error_invalid_email">This email address is invalid</string>
  <string name="error_invalid_password">This password is too short</string>
  <string name="error_incorrect_password">This password is incorrect</string>
  <string name="error_field_required">This field is required</string>
  <string name="permission_rationale">"Contacts permissions are needed for providing email
    completions."
  </string>
  <string name="navigation_drawer_open">Open navigation drawer</string>
  <string name="navigation_drawer_close">Close navigation drawer</string>
  <string name="action_settings">Settings</string>
  <string name="personal_info">Personal Information</string>
  <string name="account_info">Account Information</string>
  <string name="previous_study">Previous Study / Experiences</string>
  <string name="field_studies">Field Studies</string>
  <string name="stimulus">Stimulus</string>
  <string name="record_send">Record and Send</string>
  <string-array name="course_of_study">
    <item>Natural Sciences - Agriculture </item>
    <item>Natural Sciences - Biological sciences </item>
    <item>Natural Sciences - Chemistry </item>
    <item>Natural Sciences - Computer and Information Sciences</item>
    <item>Natural Sciences - Earty, Atmosphereic and Marine sciences</item>
    <item>Natural Sciences - Health and Medical Sciences</item>
    <item>Natural Sciences - Mathematical sciences</item>
    <item>Natural Sciences - Physics and astronomy</item>
    <item>Natural Sciences - ZOther</item>
    <item>Engineering - Chemical engineering</item>
    <item>Engineering - Civil engineering</item>
    <item>Engineering - Electrical and Electronic engineering</item>
    <item>Engineering - Industrial engineering</item>
    <item>Engineering - Materials engineering</item>
    <item>Engineering - Mechanical engineering</item>
    <item>Engineering - Food engineering</item>
    <item>Engineering - ZOther</item>
    <item>Social Sciences - Antropology and Archaeology</item>
    <item>Social Sciences - Economics</item>
    <item>Social Sciences - Law</item>
    <item>Social Sciences - Political Science</item>
    <item>Social Sciences - Psychology</item>
    <item>Social Sciences - Public Administration</item>
    <item>Social Sciences - Sociology</item>
    <item>Social Sciences - Tourism/hospitality</item>
    <item>Social Sciences - Education/Training</item>
    <item>Social Sciences - ZOther</item>
    <item>Arts - History</item>
    <item>Arts - Architecture and Construction</item>
    <item>Arts - Fine/Creative arts and design</item>
    <item>Arts - ZOther</item>
    <item>Humanities - Communication</item>
    <item>Humanities - Language/Literature</item>
    <item>Humanities - Philosophy</item>
    <item>Humanities - Religion and Theory</item>
    <item>Humanities - Media/journalism</item>
    <item>Humanities - ZOther</item>
    <item>Business - Accounting</item>
    <item>Business - Banking and Finance</item>
    <item>Business - Business administration and management</item>
    <item>Business - ZOther</item>
    <item>ZOther</item>
  </string-array>
  <string-array name="degree_data">
    <item>Other</item>
    <item>General Baccalaureate</item>
    <item>General Baccalaureate - Science</item>
    <item>General Baccalaureate - Literature</item>
    <item>Vocational/Technical Baccalaureate</item>
    <item>Religious Baccalaureate</item>
    <item>Adadiyah certificate/ Sixth Form Baccalaureate</item>
    </string-array>
  <string-array name="relocation_paperwork">
    <item>Agree</item>
    <item>Refusal</item>
    <item>Pending</item>
  </string-array>
  <string-array name="dependents_relationship">
    <item>Brothers/Systers</item>
    <item>Parent (s)</item>
    <item>Children</item>
  </string-array>
  <string-array name="educational_status">
    <item>Too young to go to school</item>
    <item>Currently enrolled in primary/secondary education</item>
    <item>Currently enrolled in higher education</item>
    <item>Finished higher education</item>
    <item>Dropped out</item>
  </string-array>
  <string-array name="high_education_status">
    <item>Dropped out</item>
    <item>Not Started</item>
    <item>Started</item>
    <item>Finished</item>
    </string-array>
  <string-array name="hear_about_spark">
    <item>Friend/Family</item>
    <item>Colleague</item>
    <item>Social Network (e.g. Facebook, Twitter)</item>
    <item>Search Engine</item>
    <item>Organisation</item>
    <item>Other</item>
  </string-array>
  <string-array name="how_to_rebuild_syrian">
    <item>It will help me start a business/enterprise/organization in Syria</item>
    <item>It will help me support my family inside Syria </item>
    <item>I will be able to share my knowledge and experience when I return to my home community</item>
    <item>It will give me hope for a future in Syria </item>
    <item>I don\'t know</item>
  </string-array>
  <string-array name="interested_particular_academic_course">
    <item>It is something I\'ve wanted to do since I was a child</item>
    <item>My parents want me to take this study course</item>
    <item>I believe it can help me play important part in improving my community</item>
    <item>I believe I will earn a lot of money</item>
    <item>I don\'t  know </item>
  </string-array>
  <string-array name="years">
    <item>1930</item><item>1931</item><item>1932</item><item>1933</item><item>1934</item><item>1935</item><item>1936</item><item>1937</item><item>1938</item><item>1939</item><item>1940</item><item>1941</item><item>1942</item><item>1943</item><item>1944</item><item>1945</item><item>1946</item><item>1947</item><item>1948</item><item>1949</item><item>1950</item><item>1951</item><item>1952</item><item>1953</item><item>1954</item><item>1955</item><item>1956</item><item>1957</item><item>1958</item><item>1959</item><item>1960</item><item>1961</item><item>1962</item><item>1963</item><item>1964</item><item>1965</item><item>1966</item><item>1967</item><item>1968</item><item>1969</item><item>1970</item><item>1971</item><item>1972</item><item>1973</item><item>1974</item><item>1975</item><item>1976</item><item>1977</item><item>1978</item><item>1979</item><item>1980</item><item>1981</item><item>1982</item><item>1983</item><item>1984</item><item>1985</item><item>1986</item><item>1987</item><item>1988</item><item>1989</item><item>1990</item><item>1991</item><item>1992</item><item>1993</item><item>1994</item><item>1995</item><item>1996</item><item>1997</item><item>1998</item><item>1999</item><item>2000</item><item>2001</item><item>2002</item><item>2003</item><item>2004</item><item>2005</item><item>2006</item><item>2007</item><item>2008</item><item>2009</item><item>2010</item><item>2011</item><item>2012</item><item>2013</item><item>2014</item><item>2015</item><item>2016</item>
  </string-array>
  <string-array name="marital_status">
    <item>Deceased</item>
    <item>Widowed</item>
    <item>Single</item>
    <item>Married</item>
    <item>Divorced</item>
  </string-array>
  <string-array name="plan_after_graduation">
    <item>I will look for opportunities to continue my studies in the country where I complete my bachelor\'s study </item>
    <item>I will look for an internship in my field </item>
    <item>I want to find a job immediately, whether it is in my field or not </item>
    <item>I would like to start my own business/enterprise/organization </item>
    <item>I don\'t know</item>
  </string-array>
  <string-array name="gender">
    <item>Male</item>
    <item>Female</item>
  </string-array>
  <string-array name="status_eligibility">
    <item>Eligible</item>
    <item>More info needed</item>
    <item>Not Eligible</item>
    <item>Conditionally eligible</item>
  </string-array>
  <string-array name="status_selection">
    <item>Invitation to Boot Camp</item>
    <item>Non eligible</item>
    <item>Pre Reserve List</item>
    <item>Post Reserve List</item>
    <item>Selected</item>
  </string-array>
  <string-array name="status_resettlement_application">
    <item>Approved</item>
    <item>Turned down</item>
    <item>Pending</item>
  </string-array>
  <string-array name="yes_no">
    <item>Yes</item>
    <item>No</item>
  </string-array>
  <string-array name="country_of_residence">
    <item>Lebanon</item>
    <item>Iraq</item>
    <item>Jordan</item>
    <item>Turkey</item>
    <item>Syria</item>
    <item>The occupied Palestinian</item>
    <item>Other</item>
    </string-array>
  <string name="first_name_field">First name as it is written in passport/identity card in Arabic
  </string>
  <string name="last_name_field">Last name as it is written in passport/identity card in Arabic
  </string>
  <string name="gender_field">Gender</string>
  <string name="already_got_scholarship_field">Do you already have a scholarship?</string>
  <string name="specify_grant_field">If yes, please specify the grant that you\'ll receive</string>
  <string name="first_study_interest_field">First option: What field of study are you interested in
    studying?</string>
  <string name="second_study_interest_field">Second option: What field of study are you interested
    in studying?</string>
  <string name="grants_applications_field">Are you applying for other grants/scholarship?</string>
  <string name="specify_certificates">If yes, please specify with certificates(s)</string>
  <string name="reason_for_choosing_field">Reason for choosing this particular academic field</string>
  <string name="post_graduation_plans_field">What do you plan to do after graduation?</string>
  <string name="plans_to_help_syrian_reconstruction_field">How do you think your education can help
    contribute towards the reconstruction of Syria?</string>
  <string name="spark_provide_grants_field">SPARK and other official bodies can use this information
    to provide grants</string>
  <string name="how_did_you_hear_field">How did you hear about SPARK?</string>
  <string name="organization_otherwise_details_field">Organization or otherwise, please provide
    details</string>
  <string name="disclosure_statement_field">Disclosure statement</string>
  <string name="disclosure_statement_text">I assure that all the information contained within the
    authorized grant applicationsis true and accurate. I understadn that in the even of any evidence
    of an error in the information or documents submitted will make me ineligible to enefit from
    the grant program. The special Spark organization grant program funded by Ministry of Foreign
    Affairs in the Kingdom of the Netherlands. Any other organizations or groups are not associated
    with this program. Spark organization is exclusively concerened with the selection of students
    who will be offered scholarships</string>
</resources>