<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/spark_provide_grants_field"/>
  <Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/spark_provide_grants_input"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/how_did_you_hear_field"/>
  <Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/how_did_you_hear_input"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/organization_otherwise_details_field"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/organization_otherwise_details_input"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/disclosure_statement_field"/>
  <CheckBox
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/disclosure_statement_text"
    android:id="@+id/disclosure_checkbox"/>
</LinearLayout>