<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/already_got_scholarship_field"/>
  <Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/already_got_scholarship_input"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/specify_grant_field"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/specify_grant_input"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/first_study_interest_field"/>
  <Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/first_study_interest_input"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/second_study_interest_field"/>
  <Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/second_study_interest_input"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/grants_applications_field"/>
  <Spinner
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/grants_applications_input"/>

  <TextView
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:text="@string/specify_certificates"/>
  <EditText
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:id="@+id/specify_certificates_input"/>

</LinearLayout>